<resources>
    <string name="app_name">ciste 2.0</string>
    <string name="start_screen_description">Touch to start</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="inventory_title">Inventory</string>
    <string name="inventory_message_default">Select an item to use</string>
    <string name="second_object_use_message">Please select the other item to use with:</string>
    <string name="invalid_combination">That does not make sense!</string>
    <string name="game_menu">Select game to play</string>
    <string name="confirmation">Yes</string>
    <string name="denial">No</string>
    <string name="delete_item_message">Are you sure you want to delete it?</string>
    <string name="matching_text">Matching</string>
    <string name="error_downloading_game">Error to download the game</string>
    <string name="error_uploading_game">Error to upload the game</string>
    <string name="success_uploading_game">Success to upload the game</string>
    <string name="error_searching_game">Error during the search</string>
    <string name="title_game_meta">Game metadata</string>
    <string name="game_title">Game title</string>
    <string name="game_title_help_text">Enter short name for the game</string>
    <string name="game_language_help_text">Language</string>
    <string name="game_description_help_text">Enter game description</string>
    <string name="create_game_button">Create</string>
    <string name="game_location_help_text">Enter details where the game is located</string>
    <string name="scene_selection_title">Select the scene you want to edit</string>
    <string name="add">Add one</string>
    <string name="no_edit_mode">There is no edit mode for this type of scene</string>
    <string name="title_new_scene">Create new scene</string>
    <string name="scene_title_help_text">Enter name of the scene (to find it back later)</string>
    <string name="picMusic">Picture with music</string>
    <string name="video">video</string>
    <string name="exit">exit</string>
    <string name="detector">picture detector</string>
    <string name="updateInventory">update inventory</string>
    <string name="ruleEngine">rule engine</string>
    <string name="debug">debug</string>
    <string name="inventory">inventory</string>
    <string name="menu">menu</string>
    <string name="scene_type_selection_title_help">Select the type of scene you want to create</string>
    <string name="create_button">Create</string>
    <string name="next_button">Next</string>
    <string name="keep_same_pic">Keep same pic</string>
    <string name="empty_field_error">field cannot be empty</string>
    <string name="tool_long_field">field cannot be longer than </string>
    <string name="element_not_in_list">please select an element from the list</string>
    <string name="element_not_selected">You need to select an element in the list</string>
    <string name="file_not_selected">You need to select a file to proceed</string>
    <string name="upload_file_button_text">Upload</string>
    <string name="select_picture_text_title">Select the picture to show</string>
    <string name="select_audio_text_title">Select the sound/music to play</string>
    <string name="select_file_button_text">Select existing file</string>
    <string name="no_item_to_select">There is no item you can select from</string>
    <string name="quit">Are you sure you want to quit?</string>
    <string name="next_scene_title">Select next scene</string>
    <string name="pic_optional_help_text">Add optional text to display</string>
    <string name="loop_sound_help_text">Play sound in loop</string>
    <string name="save_text">Save</string>
    <string name="change_starting_scene">Change starting scene</string>
    <string name="select_scene_title">Select the scene</string>
    <string name="video_select_text">Select video to play</string>
    <string name="title_menu_editor_selection">Select the menu item you want to edit</string>
    <string name="title_entity_help_text">Enter the text to show</string>
    <string name="delete">delete</string>
    <string name="select_element_to_delete">Select the element to delete</string>
    <string name="update_inventory_editor_title">Select what you want to do with the inventory</string>
    <string name="remove_inventory_menu">Manage the items to remove from inventory</string>
    <string name="add_item_to_inventory_button">Manage the items to add to the inventory</string>
    <string name="item_removal_help_text">Select element to remove from the inventory</string>
    <string name="item_removal_cannot_edit">Cannot edit an item can just add or remove them from the list.</string>
    <string name="first_item_selection_title">Select the first item to combine</string>
    <string name="second_item_selection_title">Select the second item to combine</string>
    <string name="combination_exists_error">Some combinations of items already exist</string>
    <string name="file_overwrite">A resource with same filename is already loaded, are you sure you want to overwrite it?</string>
    <string name="ref_pic">Select the picture to compare to</string>
    <string name="duplicate_pic">There are several times the same pictures, please remove the duplicates.</string>
    <string name="login_failure">You need to login to play this game.</string>
    <string name="game_size_info">Game saved, the actual game size is VAR_SIZE MB, the maximum size to share the game is MAX_SIZE MB</string>
    <string name="game_too_big">The game is too big: VAR_SIZE MB, the maximum size to share the game is MAX_SIZE MB</string>
    <string name="update_detector_pic">Add/Update pic to detect</string>
    <string name="detector_file_name">Enter file name of the picture of the detector</string>
    <string name="filename_error">Filename can only have digits and letters</string>
    <string name="file_save_error">Failed to save the  file</string>
    <string name="transfer_abort">On going transfer will abort, do you want to continue?</string>
    <string name="edit_meta_button_text">Edit game metadata</string>
    <string name="clear_resource">Clear unused resources</string>
    <string name="confirmation_delete_resource">Are you sure you want to delete all unused resources?</string>
    <string name="scene_not_exist">You cannot switch to that scene as it does not exist</string>
    <string name="not_cfg_scene">Game cannot be played or shared, some scenes are not configured:</string>
    <string name="item_in_use_error">You cannot delete as item:VAR_ITEM in use in scene(s):VAR_SCENES</string>
    <string name="contains">contains</string>
    <string name="all">all</string>
    <string name="rule_picker_title">Select rule to apply</string>
    <string name="item_selection_title">Select the items the rule applies on</string>
    <string name="edit_rules_button_text">Edit rules</string>
    <string name="change_rules_order">Change rules order</string>
    <string name="default_scene_text">Change default scene</string>
    <string name="error_no_default_scene">You need to select a default scene</string>
    <string name="item_order_title">Change order of rules</string>
    <string name="cannot_delete_scene">Cannot delete scene as used in other scene(s):</string>
    <string name="confirmation_share_game">Are you sure you want to share the game? Please ensure only games which are ready to play.</string>
    <string name="cannot_delete_starting_scene">Cannot delete starting scene.</string>
    <string name="cannot_delete_scene_back_button">Cannot delete scene pointed by back button.</string>
    <string name="back_button_text">Select backbutton scene</string>
    <string name="file_different_extension_error">You cannot have a file with the same name but a different extension. Conflicting file:</string>
    <string name="game_description">Description</string>
    <string name="game_location">Localization</string>
    <string name="game_language">Language</string>
    <string name="game_size">Size</string>
    <string name="game_author">Author</string>
    <string name="game_under_review">Game under review, not playable yet!!</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
    <string name="game_help">Download the \'tutorial (en)\' game to get details on the way to create your own games</string>
    <string name="invalid_combination2">Do you think before combining objects?</string>
    <string name="invalid_combination3">Are you so desperate to try this?</string>
    <string name="invalid_combination4">I think you click by mistake on the wrong item to combine...</string>
    <string name="take_pic">take photo</string>
    <string name="skip_scan">Skip</string>
    <string name="scanner_list">Edit detector list</string>
    <string name="skip_scanner_button">Select scene to skip the scan</string>

</resources>